# ecp_authen_bm

./: .gitignore  CMakeLists.txt  CMakePresets.json  SmartphoneKey_bm LinkServer Debug.launch  SmartphoneKey_bm_Debug.ld  _CMakeLists._txt  board.cmake  cmsis.cmake  components.cmake  device.cmake  drivers.cmake  flags.cmake  mcux_include.json  nxpnfcrdlib.cmake  rtt.cmake  utilities.cmake
Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  SmartphoneKey_bm.elf  SmartphoneKey_bm.elf.hex  SmartphoneKey_bm_Debug_library.ld  SmartphoneKey_bm_Debug_memory.ld  build.ninja  cmake_install.cmake  compile_commands.json  output.map
Debug/.cmake/api/v1/reply/: cache-v2-0952da0f059d5799c915.json  cmakeFiles-v1-2efb3e6c5a0eba100568.json  codemodel-v2-45ce1a12422b09b76897.json  codemodel-v2-e3a3f98119972e4119c3.json  index-2025-10-03T14-09-34-0351.json  (+4 more)
NxpCtRdlib/comps/phpalCt/inc/: phpalCt.h
NxpCtRdlib/comps/phpalCt/src/: phpalCt.c  phpalCt_T0.c  phpalCt_T0.h  phpalCt_T1.c  phpalCt_T1.h
NxpCtRdlib/phhalCt/phhal_Lower/: ph_EStatus.h  ph_NxpCTBuild.h  phhalCt.h  phhalCt_Config.c  phhalCt_Int.h  phhalCt_Interface.h  phhalCt_TDA.c  phhalCt_TDA.h  phhalCt_platform.c  phhalCt_platform.h
NxpCtRdlib/phhalCt/phhal_upper/: phhalCt.c  phhalCt_Activate.c  phhalCt_Common.c  phhalCt_Event.c  phhalCt_Event.h  phhalCt_Transceive.c
NxpNfcRdlib/comps/phCryptoRng/src/: phCryptoRng.c
NxpNfcRdlib/comps/phCryptoSym/src/: phCryptoSym.c
NxpNfcRdlib/comps/phKeyStore/src/: phKeyStore.c
NxpNfcRdlib/comps/phNfcLib/src/: phNfcLib.c  phNfcLib_15693.c  phNfcLib_18000p3m3.c  phNfcLib_Initialization.c  phNfcLib_Initialization.h  phNfcLib_MFC.c  phNfcLib_MFDF.c
NxpNfcRdlib/comps/phTools/src/: phTools_Q.c
NxpNfcRdlib/comps/phacDiscLoop/src/: phacDiscLoop.c
NxpNfcRdlib/comps/phalICode/src/: phalICode.c  phalICode_Int.c  phalICode_Int.h
NxpNfcRdlib/comps/phalMfNtag42XDna/src/: phalMfNtag42XDna.c
NxpNfcRdlib/comps/phalMfc/src/: phalMfc.c
NxpNfcRdlib/comps/phalMfdf/src/: phalMfdf.c  phalMfdf_Int.c  phalMfdf_Int.h
NxpNfcRdlib/comps/phalMfdfEVx/src/: phalMfdfEVx.c  phalMfdfEVx_Int.c
NxpNfcRdlib/comps/phalMfdfLight/src/: phalMfdfLight.c  phalMfdfLight_Int.c
NxpNfcRdlib/comps/phalMfpEVx/src/: phalMfpEVx.c  phalMfpEVx_Int.h
NxpNfcRdlib/comps/phalMful/src/: phalMful.c  phalMful_Int.c
NxpNfcRdlib/comps/phalT1T/src/: phalT1T.c
NxpNfcRdlib/comps/phalTop/src/: phalTop.c
NxpNfcRdlib/comps/phalVca/src/: phalVca.c  phalVca_Int.c  phalVca_Int.h
NxpNfcRdlib/comps/phhalHw/src/: phhalHw.c
NxpNfcRdlib/comps/phlnLlcp/src/: phlnLlcp.c
NxpNfcRdlib/comps/phpalFelica/src/: phpalFelica.c
NxpNfcRdlib/comps/phpalI14443p3a/src/: phpalI14443p3a.c
NxpNfcRdlib/comps/phpalI14443p3b/src/: phpalI14443p3b.c
NxpNfcRdlib/comps/phpalI14443p4/src/: phpalI14443p4.c
NxpNfcRdlib/comps/phpalI14443p4a/src/: phpalI14443p4a.c
NxpNfcRdlib/comps/phpalI18000p3m3/src/: phpalI18000p3m3.c
NxpNfcRdlib/comps/phpalI18092mPI/src/: phpalI18092mPI.c
NxpNfcRdlib/comps/phpalI18092mT/src/: phpalI18092mT.c
NxpNfcRdlib/comps/phpalMifare/src/: phpalMifare.c
NxpNfcRdlib/comps/phpalSli15693/src/: phpalSli15693.c
NxpNfcRdlib/intfs/: NxpNfcRdLib_Ver.h  phCryptoRng.h  phCryptoSym.h  phKeyStore.h  phNfcLib.h  phNxpNfcRdLib_Config.h  phTools.h  phacDiscLoop.h  phalFelica.h  phalI18000p3m3.h  phalICode.h  phalMfNtag42XDna.h  phalMfc.h  phalMfdf.h  phalMfdfEVx.h  phalMfdfLight.h  phalMfpEVx.h  phalMful.h  phalTop.h  phalVca.h  phceT4T.h  phhalHw.h  phhalHw_SamAV3_Cmd.h  phlnLlcp.h  phnpSnep.h  phpalEpcUid.h  phpalFelica.h  phpalI14443p3a.h  phpalI14443p3b.h  phpalI14443p4.h  phpalI14443p4a.h  phpalI18000p3m3.h  phpalI18092mPI.h  phpalI18092mT.h  phpalMifare.h  phpalSli15693.h
NxpNfcRdlib/types/: ph_NxpBuild.h  ph_NxpBuild_Platform.h  ph_Status.h  ph_TypeDefs.h
board/: clock_config.h  pin_mux.c
components/DAL/inc/: phDriver.h  phDriver_Gpio.h  phDriver_Timer.h  phbalReg.h
components/DAL/src/PN76xx/: phDriver_PN76xx.c
components/DAL/src/SAM/: phbalReg_Sam.c  phbalReg_Sam.h  phbalReg_Sam_Int.c  phbalReg_Sam_Int.h
components/phOsal/inc/: phOsal.h  phOsal_Config.h
components/phOsal/src/NullOs/: phOsal_NullOs.c  phOsal_NullOs.h
device/hal_intfs/inc/: PN76_DL.h  PN76_Flc.h
drivers/: fsl_gpdma.c  fsl_gpt.h  fsl_spi.c
mbedcrypto/inc/: aes_alt.h  bignum.h  cmac_alt.h  config.h  crypto_helper.h  des_alt.h  ecc_alt.h  eddsa_alt.h  memory_buffer_alloc.h  platform.h  platform_util.h  rsa_alt.h  sha256_alt.h  sha512_alt.h  sha_alt.h
mbedcrypto/src/: aes_alt.c  bignum.c  cmac_alt.c  crypto_helper.c  des_alt.c  ecc_alt.c  eddsa_alt.c  memory_buffer_alloc.c  platform.c  platform_util.c  rsa_alt.c  sha256_alt.c  sha512_alt.c  sha_alt.c
source/: SmartLock.c  SmartLock.h  mbedtls_config_alt.h  phApp_Helper.c  phApp_Init.c  phApp_Init.h  phApp_PN76XX_Init.c  ph_NxpBuild_App.h
source/apple_pass_manager/: apple_pass_manager.c  apple_pass_manager.h
source/delay_ms/: delay_ms.c  delay_ms.h
source/device_manager/: device_manager.c  device_manager.h
source/google_pass_manager/: ApduEx.c  ApduEx.h  NdefEx.c  NdefEx.h  NdefEx_helper.c  NdefEx_helper.h  google_pass_manager.c  google_pass_manager.h
source/key_manager/: key_manager.c  key_manager.h
source/led_blinky/: led_blinky.c  led_blinky.h
source/nfc_comm/: nfc_comm.c  nfc_comm.h
source/nrf_comm/: nrf_comm.c  nrf_comm.h  nrf_comm_protocol.c  nrf_comm_protocol.h  spi_comm.c  spi_comm.h  spi_protocol.c  spi_protocol.h
source/ota/: ota.c  ota.h
source/picc_manager/: evx_write_flow.c  evx_write_flow.h  nfc_debug_helpers.h  picc_manager.c  picc_manager.h
source/taskmanager/: taskmanager.c  taskmanager.h  taskmanager_test.c
source/taskmanager/peripheral/: taskmanager_peripheral.c  taskmanager_peripheral.h
startup/: startup_pn7642.c
(+122 files in other folders)
